lineup api added

--- a/index.html
+++ b/index.html
@@ -42,23 +42,15 @@
     </div>
     <div class="match-details">
 
-      <div>
-        <img class="comp-logo" src="logos/leagues/premier_league.png" alt="EPL">
-        <h2>Premier League</h2>
+      <div id="matchleague">
+
       </div>
-      <div>
-        <img class="comp-logo" src="logos/teams/totenham.png" alt="Tottenham">
-        <span>
-          <h2>Tottenham Hotspur</h2>
-          <p>form</p>
-        </span>
+      <div id="opponentinfo">
+
       </div>
       <div>
         <img class="comp-logo">
-        <span>
-          <h2>Emirates Stadium</h2>
-          <h3>September 15th</h3>
-          <h3>18:00</h3>
+        <span id="venueinfo">
         </span>
       </div>
     </div>
@@ -74,91 +66,15 @@
   <div class="lineups">
     <div class="team-info">
       <h2>Home Lineup</h2>
-      <h1>Arsenal:</h1>
-    <ul>
-      <li class="player-details">
-        <div class="player-info">
-          <p>GK</p>
-          <p>A. Ramsdale</p>
-          <p>#0</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-          <p>RB</p>
-          <p>B. White</p>
-          <p>#20</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-          <p>CB</p>
-          <p>W. Saliba</p>
-          <p>#1</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-        <p>CB</p>
-        <p>Gabriel</p>
-        <p>#2</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-          <p>LB</p>
-          <p>K. Tierney</p>
-          <p>#3</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-          <p>DM</p>
-          <p>G. Xhaka</p>
-          <p>#34</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-          <p>DM</p>
-          <p>T. Partey</p>
-          <p>#3</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-          <p>RW</p>
-          <p>B. Saka</p>
-          <p>#7</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-          <p>CM</p>
-          <p>M. Odergaard</p>
-          <p>#8</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-          <p>LW</p>
-          <p>G. Martinelli</p>
-          <p>#11</p>
-        </div>
-      </li>
-      <li class="player-details">
-        <div class="player-info">
-          <p>CF</p>
-          <p>G. Jesus</p>
-          <p>#9</p>
-        </div>
-      </li>
+      <h1 id=hometeam ></h1>
+    <ul id=homelineup>
+      
     </ul>
     </div>
 
     <div>
       <h2>Away lineup</h2>
-      <h1>Tottenham:</h1>
+      <h1 id=awayteam ></h1>
       <ul>
         <li class="player-details">
           <div class="player-info">
@@ -242,4 +158,10 @@
   </div>
 
 </body>
+
+
+<script type="text/javascript" src="main.js">
+
+</script>
+
 </html>
