standings api done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://kit.fontawesome.com/3d720cf310.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/main.css">
   <title>Gooners</title>
 </head>
@@ -13,23 +14,8 @@
   </div>
   <!-- All COMPETITTIONS AND STANDINGS -->
 
-    <div class="comps-table">
-      <div class="comp-line">
-        <img class="comp-logo" src="logos/leagues/premier_league.png" alt="">
-        <h3>Premier League</h3> <h5>Match Week #6</h5><h5>#1</h5>
-      </div>
-      <div class="comp-line">
-        <img class="comp-logo" src="logos/leagues/premier_league.png" alt="">
-        <h3>Europa League</h3> <h5>Group Stage</h5> <h5>#1</h5>
-      </div>
-      <div class="comp-line">
-        <img class="comp-logo" src="logos/leagues/premier_league.png" alt="">
-        <h3>FA Cup</h3> <h5>Quarter Finals</h5> <h5>Active</h5>
-      </div>
-      <div class="comp-line">
-        <img class="comp-logo" src="logos/leagues/premier_league.png" alt="">
-        <h3>League Cup</h3> <h5>Round of 16</h5> <h5>Eliminated</h5>
-      </div>
+    <div id="allstandings" class="comps-table">
+
     </div>
 
 
@@ -57,102 +43,26 @@
   </div>
 
   <!-- IF TODAY IS MATCH DAY DISPLAY THIS -->
-  <div class="live-details">
+  <div id="currentscore" class="live-details">
     <h1>0 - 0</h1>
     <h3>19'</h3>
   </div>
 
   <!-- TEAM LINEUPS -->
-  <div class="lineups">
+  <div id="teamlineups" class="lineups">
     <div class="team-info">
       <h2>Home Lineup</h2>
       <h1 id=hometeam ></h1>
     <ul id=homelineup>
-      
+
     </ul>
     </div>
 
     <div>
       <h2>Away lineup</h2>
       <h1 id=awayteam ></h1>
-      <ul>
-        <li class="player-details">
-          <div class="player-info">
-            <p>GK</p>
-            <p>A. Ramsdale</p>
-            <p>#0</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-            <p>RB</p>
-            <p>B. White</p>
-            <p>#20</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-            <p>CB</p>
-            <p>W. Saliba</p>
-            <p>#1</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-          <p>CB</p>
-          <p>Gabriel</p>
-          <p>#2</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-            <p>LB</p>
-            <p>K. Tierney</p>
-            <p>#3</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-            <p>DM</p>
-            <p>G. Xhaka</p>
-            <p>#34</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-            <p>DM</p>
-            <p>T. Partey</p>
-            <p>#3</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-            <p>RW</p>
-            <p>B. Saka</p>
-            <p>#7</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-            <p>CM</p>
-            <p>M. Odergaard</p>
-            <p>#8</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-            <p>LW</p>
-            <p>G. Martinelli</p>
-            <p>#11</p>
-          </div>
-        </li>
-        <li class="player-details">
-          <div class="player-info">
-            <p>CF</p>
-            <p>G. Jesus</p>
-            <p>#9</p>
-          </div>
-        </li>
+      <ul id=awaylineup>
+
       </ul>
     </div>
   </div>
