styling add stage and round to details

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://kit.fontawesome.com/3d720cf310.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jura&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>Gooners</title>
 </head>
@@ -36,7 +39,7 @@
       </div>
       <div>
         <img class="comp-logo">
-        <span id="venueinfo">
+        <span id="venueinfo" class="matchcardDetails">
         </span>
       </div>
     </div>
@@ -44,8 +47,8 @@
 
   <!-- IF TODAY IS MATCH DAY DISPLAY THIS -->
   <div id="currentscore" class="live-details">
-    <h1>0 - 0</h1>
-    <h3>19'</h3>
+    <h1 id="matchscore">0 - 0</h1>
+    <h3 id="matchtime">19'</h3>
   </div>
 
   <!-- TEAM LINEUPS -->
